# chess_prep

./: Cargo.toml  chess-prep.toml  rustfmt.toml
src/: config.rs  main.rs
src/data/: lichess.rs  mod.rs  pgn_import.rs
src/engine/: stockfish.rs
src/pipeline/: analyzer.rs  annotator.rs  mod.rs  profiler.rs  scorer.rs
src/repertoire/: mod.rs  reachability.rs  tree.rs
