[package]
name = "chess_prep"
version = "0.1.0"
edition = "2024"

[dependencies]
clap    = { version = "4", features = ["derive"] }
toml    = "0.8"
serde   = { version = "1", features = ["derive"] }
anyhow  = "1"
pgn-reader = "0.29"
reqwest = { version = "0.12", features = ["blocking","json"] }
shakmaty = "0.30"
urlencoding = "2"
